# hr

./: .gitignore  README.adoc  pyproject.toml
hr/: __main__.py  lib.py
